--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
   <ion-tabs>
 
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="landing">
+      <ion-tab-button tab="debug">
         <ion-icon name="cog"></ion-icon>
         <ion-label>Debug</ion-label>
       </ion-tab-button>
