--- a/src/app/pages/buttons.component.html
+++ b/src/app/pages/buttons.component.html
@@ -1,11 +1,11 @@
 <ion-content>
     <div class="ion-padding has-header">
-        <ng-container *ngIf="activePlayer$ | async as ap">
-            <ng-container *ngIf="enemy$ | async as enmy">
-                <app-enemy [enemy]="enmy"></app-enemy>
+        <ng-container *ngIf="activePlayer">
+            <ng-container *ngIf="enemy">
+                <app-enemy [enemy]="enemy"></app-enemy>
             </ng-container>
 
-            <app-player [player]="ap"></app-player>
+            <app-player [player]="activePlayer"></app-player>
             <ion-button expand="block" (click)="fight();">Fight</ion-button>
         </ng-container>
     </div>
