--- a/src/app/debug/debug.component.html
+++ b/src/app/debug/debug.component.html
@@ -3,5 +3,9 @@
         <ng-container *ngIf="playerList">
             {{ jsonOfiablePlayerList | json }}
         </ng-container>
+        <hr />
+        <ng-container *ngIf="enemy">
+            {{ enemy | json }}
+        </ng-container>
     </div>
 </ion-content>
