--- a/src/app/pages/town.component.html
+++ b/src/app/pages/town.component.html
@@ -4,7 +4,8 @@
             Player health {{ activePlayer.health }}
             <app-progress-bar [value]="activePlayer.health || 0" [max]="activePlayer.fullHealth || 100" [min]="0"></app-progress-bar>
         </ng-container>
-
         <ion-button expand="block" (click)="rest();">Rest</ion-button>
+
+        <app-store></app-store>
     </div>
 </ion-content>
