--- a/src/app/pages/town.component.html
+++ b/src/app/pages/town.component.html
@@ -1,8 +1,7 @@
 <ion-content>
     <div class="ion-padding has-header">
         <ng-container *ngIf="activePlayer">
-            Player health {{ activePlayer.health }}
-            <app-progress-bar [value]="activePlayer.health || 0" [max]="activePlayer.fullHealth || 100" [min]="0"></app-progress-bar>
+            <app-player-health [hero]="activePlayer"></app-player-health>
         </ng-container>
         <ion-button expand="block" (click)="rest();">Rest</ion-button>
 
