--- a/src/app/parts/player-health.component.html
+++ b/src/app/parts/player-health.component.html
@@ -1,7 +1,7 @@
-Player health {{ player.health }}
+Player health {{ hero.health }}
 <div class="health-display-wrapper">
     <div><ion-icon name="heart"></ion-icon></div>
     <div>
-        <app-progress-bar [value]="player.health || 0" [max]="player.fullHealth || 100" [min]="0"></app-progress-bar>
+        <app-progress-bar [value]="hero.health || 0" [max]="hero.fullHealth || 100" [min]="0"></app-progress-bar>
     </div>
 </div>
