--- a/src/app/parts/player.component.html
+++ b/src/app/parts/player.component.html
@@ -1,4 +1,4 @@
-<app-player-health [player]="player"></app-player-health>
+<app-player-health [hero]="hero"></app-player-health>
 
-Experience {{ player.experience}}
-<app-progress-bar [value]="player.experience || 0" [max]="player.nextLevelExperience || 100" [min]="player.baseLevelExperience || 0"></app-progress-bar>
+Experience {{ hero.experience}}
+<app-progress-bar [value]="hero.experience" [max]="hero.nextBreakpoint" [min]="hero.currentBreakpoint"></app-progress-bar>
