--- a/src/app/shared/progress-bar/progress-bar.component.scss
+++ b/src/app/shared/progress-bar/progress-bar.component.scss
@@ -6,7 +6,7 @@ $progress-bg: #f5f5f5 !default;
 $border-radius-base: 4px;
 $font-size-small: 16px;
 $progress-bar-color: #fff !default;
-$progress-bar-bg: #428bca;
+$progress-bar-bg: var(--progress-bar-bg, #555);
 $gray-light: #777;
 
 
@@ -37,7 +37,7 @@ $gray-light: #777;
     line-height: $line-height-computed;
     color: $progress-bar-color;
     //text-align: center;
-    background-color: #555;
+    background-color: $progress-bar-bg;
     box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
     @include transition(width .6s ease);
 }
