--- a/src/app/pages/town.component.scss
+++ b/src/app/pages/town.component.scss
@@ -1,3 +1,14 @@
 .has-header {
     margin-top: 50px;
 }
+@media only screen and (min-width: 600px) {
+    .home-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .store {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+}
